; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v04.c_ZSTD_getFrameParams.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v04.c_ZSTD_getFrameParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@ZSTD_frameHeaderSize_min = common dso_local global i64 0, align 8
@ZSTD_frameHeaderSize_max = common dso_local global i64 0, align 8
@ZSTD_MAGICNUMBER = common dso_local global i64 0, align 8
@prefix_unknown = common dso_local global i32 0, align 4
@ZSTD_WINDOWLOG_ABSOLUTEMIN = common dso_local global i64 0, align 8
@frameParameter_unsupported = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*, i8*, i64)* @ZSTD_getFrameParams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTD_getFrameParams(%struct.TYPE_4__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* @ZSTD_frameHeaderSize_min, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i64, i64* @ZSTD_frameHeaderSize_max, align 8
  store i64 %13, i64* %4, align 8
  br label %46

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = call i64 @MEM_readLE32(i8* %15)
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* @ZSTD_MAGICNUMBER, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = load i32, i32* @prefix_unknown, align 4
  %22 = call i64 @ERROR(i32 %21)
  store i64 %22, i64* %4, align 8
  br label %46

23:                                               ; preds = %14
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %25 = call i32 @memset(%struct.TYPE_4__* %24, i32 0, i32 8)
  %26 = load i8*, i8** %6, align 8
  %27 = bitcast i8* %26 to i32*
  %28 = getelementptr inbounds i32, i32* %27, i64 4
  %29 = load i32, i32* %28, align 4
  %30 = and i32 %29, 15
  %31 = sext i32 %30 to i64
  %32 = load i64, i64* @ZSTD_WINDOWLOG_ABSOLUTEMIN, align 8
  %33 = add nsw i64 %31, %32
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  store i64 %33, i64* %35, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = bitcast i8* %36 to i32*
  %38 = getelementptr inbounds i32, i32* %37, i64 4
  %39 = load i32, i32* %38, align 4
  %40 = ashr i32 %39, 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %23
  %43 = load i32, i32* @frameParameter_unsupported, align 4
  %44 = call i64 @ERROR(i32 %43)
  store i64 %44, i64* %4, align 8
  br label %46

45:                                               ; preds = %23
  store i64 0, i64* %4, align 8
  br label %46

46:                                               ; preds = %45, %42, %20, %12
  %47 = load i64, i64* %4, align 8
  ret i64 %47
}

declare dso_local i64 @MEM_readLE32(i8*) #1

declare dso_local i64 @ERROR(i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
